# pyuino

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-srv.txt  requirements.txt  toy.py  train.py
.github/workflows/: build_pyuino.yml  release.yml
YuinoLM/: config.json  pos_id.csv
pyuino/: __init__.py  converter.py  dataset.py  dictionary.py  model.py  server.py  toybox.py  trainer.py
pyuino/pb/: README.md  __init__.py  yuino.proto  yuino_pb2.py
toys/: index.html
yuino_onnx/: config.json  generation_config.json
