[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyuino"
description = "LLM Japanese Kana-Kanji convetor"
authors = [{name = "Masahiko Hashimoto"}]
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ["version", "dependencies"]

[project.scripts]
pyuino = "pyuino.server:run"
pyuino-toybox = "pyuino.toybox:toy_run"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
